005 huge refactoring to split the two projects